--- a/examples/nodejs/express-pull/docker-compose.yml
+++ b/examples/nodejs/express-pull/docker-compose.yml
@@ -1,5 +1,24 @@
 version: '3.9'
 services:
+  pyroscope:
+    image: grafana/pyroscope
+    ports:
+      - '4040:4040'
+
+  agent:
+    image: grafana/agent:latest
+    volumes:
+      - ./agent.config.river:/etc/agent-config/config.river
+    command:
+      - run
+      - /etc/agent-config/config.river
+      - --server.http.listen-addr=0.0.0.0:12345
+    environment:
+      HOSTNAME: agent
+      AGENT_MODE: flow
+    ports:
+      - "12345:12345"
+
   us-east:
     environment:
       - REGION=us-east
@@ -17,18 +36,6 @@ services:
       - REGION=ap-south
     build:
       context: .
-
-  pyroscope:
-    container_name: pyroscope
-    image: pyroscope/pyroscope-dev:main
-    environment:
-      - PYROSCOPE_LOG_LEVEL=debug
-    ports:
-      - '4040:4040'
-    command:
-      - 'server'
-    volumes:
-      - ./server.yml:/etc/pyroscope/server.yml
 
   load-generator:
     build:
