Active store-gateway when using single binary mode.
This activate the store-gateway when using single binary mode with object storage configured properly.

This doesn't work for filesystem because of https://github.com/grafana/pyroscope/issues/2029.

I'm still testing this and found https://github.com/grafana/pyroscope/issues/2317 that affect PGO feature when using single binary and querying for historical timerange.

Co-authored-by: hi-rustin <rustin.liu@gmail.com>

--- a/cmd/pyroscope/pyroscope.yaml
+++ b/cmd/pyroscope/pyroscope.yaml
@@ -1,2 +1,10 @@
 server:
   http_listen_port: 4040
+
+storage:
+  backend: gcs
+  gcs:
+    bucket_name: cyriltovena
+
+phlaredb:
+  max_block_duration: 5m
