fix: use a patched v1.4.1 of `loader-utils`

--- a/package.json
+++ b/package.json
@@ -187,6 +187,7 @@
     "glob-parent": ">5.1.2",
     "got": ">12.1.0",
     "json5": ">2.2.2",
+    "loader-utils": "^1.4.1",
     "mem": ">4.0.0",
     "nth-check": "^2.0.1",
     "postcss": ">8.2.13",
