fix: remove non-functioning graphviz button (#2320)
* chore: yarn script for running backend for dev

* fix: remove graph viz button and fix spacing

* fix: remove all graphviz code and deps

* fix: remove lib declarations

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "tsc -p tsconfig.json --noEmit",
     "build": "NODE_ENV=production webpack --progress --config scripts/webpack/webpack.prod.js",
     "dev": "NODE_ENV=development webpack serve --progress --color --config scripts/webpack/webpack.dev.js",
+    "backend:dev": "make build run 'PARAMS=--config.file ./cmd/pyroscope/pyroscope.yaml'",
     "cy": "cypress",
     "lint": "eslint . --ext .js,.tsx,.ts --cache",
     "lint:fix": "yarn lint --fix",
@@ -136,12 +137,9 @@
     "compression-streams-polyfill": "^0.1.4",
     "css-loader": "^4.0.0",
     "d3": "^7.3.0",
-    "d3-array": "^3.1.1",
     "d3-scale": "^4.0.2",
     "d3-scale-chromatic": "^3.0.0",
-    "d3-time": "^3.0.0",
     "file-saver": "^2.0.5",
-    "graphviz-react": "^1.2.5",
     "jquery": "^3.6.4",
     "jquery.flot.tooltip": "^0.9.0",
     "lodash.groupby": "^4.6.0",
@@ -180,10 +178,8 @@
     "@pyroscope/nodejs": "^0.2.5"
   },
   "resolutions": {
-    "d3-graphviz": "^5.1.0",
     "jquery": "^3.6.4",
     "braces": ">2.3.1",
-    "d3-color": "^3.1.0",
     "glob-parent": ">5.1.2",
     "got": ">12.1.0",
     "json5": ">2.2.2",
