--- a/.github/workflows/publish-technical-documentation-release.yml
+++ b/.github/workflows/publish-technical-documentation-release.yml
@@ -24,7 +24,7 @@ jobs:
     needs: "test"
     steps:
 
-    - name: "Checkout Phlare repo"
+    - name: "Checkout Pyroscope repo"
       uses: "actions/checkout@v3"
       with:
         fetch-depth: 0
