--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,7 +1,7 @@
 project_name: pyroscope
 before:
   hooks:
-    # This hook ensures that goreleaser uses the correct go version for a Phlare release
+    # This hook ensures that goreleaser uses the correct go version for a Pyroscope release
     - sh -euc "go version | grep "go version go1.21.0 " || { echo "Unexpected go version"; exit 1; }"
 builds:
   - env:
