--- a/operations/pyroscope/helm/pyroscope/values.yaml
+++ b/operations/pyroscope/helm/pyroscope/values.yaml
@@ -9,7 +9,7 @@ pyroscope:
     repository: grafana/pyroscope
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
-    tag: "1.0.0-rc.0"
+    tag: "1.0.0"
 
   extraArgs:
     log.level: debug
