--- a/package.json
+++ b/package.json
@@ -124,6 +124,9 @@
     "@fortawesome/free-regular-svg-icons": "~5.15.2",
     "@fortawesome/free-solid-svg-icons": "~5.14.0",
     "@fortawesome/react-fontawesome": "~0.1.11",
+    "@grafana/data": "10.1.0",
+    "@grafana/flamegraph": "^10.2.0-pre.4",
+    "@grafana/ui": "^10.1.0",
     "@hookform/resolvers": "^2.9.8",
     "@mui/base": "5.0.0-alpha.98",
     "@mui/material": "5.10.11",
