--- a/operations/pyroscope/helm/pyroscope/values.yaml
+++ b/operations/pyroscope/helm/pyroscope/values.yaml
@@ -28,6 +28,9 @@ pyroscope:
   nameOverride: ""
   fullnameOverride: ""
 
+  rbac:
+    create: true
+
   serviceAccount:
     # Specifies whether a service account should be created
     create: true
