add ability to annotate services separately (#2364)
* add ability to label and annotate services separately

* remove extra labels, change attribute name

* helm/check

---------

Co-authored-by: Anton Kolesnikov <anton.e.kolesnikov@gmail.com>

--- a/operations/pyroscope/helm/pyroscope/templates/services.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/services.yaml
@@ -9,6 +9,10 @@ metadata:
   labels:
     {{- include "pyroscope.labels" . | nindent 4 }}
     app.kubernetes.io/component: {{ $component | quote }}
+  {{- if $cfg.serviceAnnotations }}
+  annotations:
+    {{- toYaml $cfg.serviceAnnotations | nindent 4 }}
+  {{- end }}
 spec:
   type: {{ .Values.pyroscope.service.type }}
   ports:
