--- a/operations/pyroscope/helm/pyroscope/templates/deployments-statefulsets.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/deployments-statefulsets.yaml
@@ -159,8 +159,9 @@ spec:
         {{- toYaml $persistence.selector | nindent 8 }}
       {{- end }}
   {{- end }}
-{{- if eq $values.kind "StatefulSet" }}
 ---
+{{- $pdb := $values.podDisruptionBudget }}
+{{- if $pdb.enabled }}
 apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
@@ -169,7 +170,11 @@ metadata:
     {{- include "pyroscope.labels" . | nindent 4 }}
     app.kubernetes.io/component: {{ $component | quote }}
 spec:
-  maxUnavailable: 1
+  {{- if hasKey $pdb "minAvailable" }}
+  minAvailable: {{ $pdb.minAvailable }}
+  {{- else }}
+  maxUnavailable: {{ $pdb.maxUnavailable }}
+  {{- end }}
   selector:
     matchLabels:
       {{- include "pyroscope.selectorLabels" . | nindent 6 }}
