--- a/examples/ruby/rideshare_rails/Gemfile
+++ b/examples/ruby/rideshare_rails/Gemfile
@@ -1,7 +1,7 @@
 source "https://rubygems.org"
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby "2.7.4"
+ruby "3.2.1"
 
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem "rails", "~> 7.0.2", ">= 7.0.2.3"
@@ -15,7 +15,7 @@ gem "sqlite3", "~> 1.4"
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", "~> 5.0"
 
-gem "pyroscope", "~> 0.5.2"
+gem "pyroscope", "= 0.5.2"
 
 gem "pyroscope-otel", "~> 0.1.1"
 gem 'opentelemetry-sdk', "~> 1.2.0"
