--- a/examples/ruby/rideshare_rails/Gemfile
+++ b/examples/ruby/rideshare_rails/Gemfile
@@ -15,7 +15,7 @@ gem "sqlite3", "~> 1.4"
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", "~> 5.0"
 
-gem "pyroscope", "= 0.5.2"
+gem 'pyroscope', '= 0.5.10'
 
 gem "pyroscope-otel", "~> 0.1.1"
 gem 'opentelemetry-sdk', "~> 1.2.0"
